# bert-rust

./: Cargo.toml  README.md  check.py
src/: config.rs  main.rs  model.rs  weight_loader.rs
