[package]
name = "rust_bert"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { version = "0.14", features = ["wgpu", "std"] }
burn-ndarray = { version = "0.14", features = ["std"] }
burn-wgpu = { version = "0.14" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hf-hub = "0.3"
safetensors = "0.4"
